# c2roo

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-04-12-c2roo-implementation.md  2026-04-12-cicd-pipeline.md
docs/superpowers/specs/: 2026-04-12-c2roo-design.md  2026-04-12-cicd-pipeline-design.md
src/c2roo/: cli.py  report.py
src/c2roo/converter/: agent_converter.py  command_converter.py  hook_converter.py  mcp_converter.py  skill_converter.py
src/c2roo/models/: __init__.py  agent.py  command.py  hook.py  mcp.py  plugin.py  skill.py
src/c2roo/parser/: __init__.py  agent_parser.py  command_parser.py  frontmatter.py  hook_parser.py  mcp_parser.py  plugin_parser.py  skill_parser.py
src/c2roo/sources/: git_source.py  local_source.py  marketplace.py
src/c2roo/writer/: __init__.py  roo_writer.py
tests/: test_cli_convert.py  test_cli_install.py  test_e2e.py  test_models.py  test_report.py  test_writer.py
tests/fixtures/sample-plugin/: .mcp.json
tests/fixtures/sample-plugin/.claude-plugin/: plugin.json
tests/fixtures/sample-plugin/agents/: code-reviewer.md
tests/fixtures/sample-plugin/commands/: commit.md
tests/fixtures/sample-plugin/hooks/: hooks.json
tests/fixtures/sample-plugin/skills/pdf-processing/: SKILL.md
tests/fixtures/sample-plugin/skills/pdf-processing/scripts/: extract.py
tests/test_converter/: test_agent_converter.py  test_command_converter.py  test_hook_converter.py  test_mcp_converter.py  test_skill_converter.py
tests/test_parser/: test_agent_parser.py  test_command_parser.py  test_frontmatter.py  test_hook_parser.py  test_mcp_parser.py  test_plugin_parser.py  test_skill_parser.py
tests/test_sources/: test_git_source.py  test_local_source.py  test_marketplace.py
