[project]
name = "c2roo"
version = "0.1.0"
description = "Convert Claude Code plugins to Roo Code format"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
c2roo = "c2roo.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/c2roo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=c2roo --cov-report=term-missing"

[tool.coverage.run]
source = ["c2roo"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 80

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "python-semantic-release>=10.5.3",
    "ruff>=0.15.10",
    "types-pyyaml>=6.0.12.20260408",
]
