[project]
name = "c2roo"
version = "0.1.0"
description = "Convert Claude Code plugins to Roo Code format"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
c2roo = "c2roo.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/c2roo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=c2roo --cov-report=term-missing"

[tool.coverage.run]
source = ["c2roo"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 80

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B"]  # allow bare asserts and common test patterns

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "python-semantic-release>=10.5.3",
    "ruff>=0.15.10",
    "types-pyyaml>=6.0.12.20260408",
]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/c2roo"]
ignore_missing_imports = true

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/c2roo/__init__.py:__version__"]
branch = "main"
changelog_file = "CHANGELOG.md"
upload_to_vcs_release = true
build_command = "uv build"
commit_parser = "conventional"
commit_message = "chore(release): {version} [skip ci]"

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_sections = [
    { type = "feat", section = "Features" },
    { type = "fix", section = "Bug Fixes" },
    { type = "perf", section = "Performance" },
    { type = "refactor", section = "Refactoring" },
    { type = "docs", section = "Documentation" },
]
